@@ -1,3 +1,9 @@
+2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, startup/linkcmds: Use top level shared
+	bsp_get_work_area() implementation.
+	* startup/bspgetworkarea.c: Removed.
+
 2008-09-15	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds: Add
